2013-08-13  Pawel Salek

	* src/sendmsg-window.c: compile without gpgme.

2013-08-13  Peter Bloomfield

	* src/sendmsg-window.c (init_menus): add transition code to read
	old message header choices.

2013-08-10  Peter Bloomfield

	* src/main-window.c (bw_action_set_boolean): use
	g_action_change_state instead of g_simple_action_set_state, so
	that the state is actually changed (Carlos Franke).

2013-08-04  Pawel Salek

	* src/sendmsg-window.c: compile with GtkSourceview

2013-07-31  Peter Bloomfield

	Port compose window to GMenu and friends

	* src/sendmsg-window.c (delete_event_cb), (sw_close_activated),
	(destroy_event_cb), (sw_edit_activated),
	(sw_select_ident_activated), (sw_get_action),
	(sw_action_set_enabled), (sw_actions_set_enabled),
	(sw_action_get_enabled), (sw_action_set_active),
	(sw_action_get_active), (update_bsmsg_identity),
	(add_urlref_attachment), (sw_attach_file_activated),
	(sw_include_messages_activated), (sw_attach_messages_activated),
	(sw_can_undo_cb), (sw_can_redo_cb), (quote_parts_select_dlg),
	(sw_insert_sig_activated), (sw_quote_activated),
	(sendmsg_window_get_toolbar_model), (bsmsg_identities_changed_cb),
	(insert_initial_sig), (bsm_prepare_for_setup), (bsm_finish_setup),
	(set_cc_from_all_recipients), (decode_and_strdup),
	(sendmsg_window_process_url), (sw_attach_file),
	(sw_include_file_activated), (subject_not_empty),
	(check_suggest_encryption), (send_message_handler),
	(sw_toolbar_send_activated), (sw_send_activated),
	(sw_queue_activated), (message_postpone), (sw_postpone_activated),
	(sw_save_activated), (sw_page_setup_activated),
	(sw_print_activated), (sw_buffer_insert_text),
	(sw_buffer_set_undo), (sw_spell_attach), (sw_undo_activated),
	(sw_redo_activated), (sw_cut_activated), (sw_copy_activated),
	(sw_paste_activated), (sw_select_text_activated),
	(sw_wrap_body_activated), (sw_reflow_activated), (check_readiness),
	(sw_entry_helper), (sw_from_change_state),
	(sw_recips_change_state), (sw_reply_to_change_state),